refactor(material-service): 자료 목록 조회 시 발생하는 N+1 문제를 별도 쿼리를 짜서 해결하도록 수정